<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © Marc Auberer 2020. All rights reserved
  -->

<com.sothree.slidinguppanel.SlidingUpPanelLayout
    android:id="@+id/slidingLayout"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="70dp"
    sothree:umanoShadowHeight="3dp"
    sothree:umanoScrollableView="@id/scrolView"
    tools:context=".DrawingActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />

        <com.raed.drawingview.DrawingView
            android:id="@+id/drawingView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            sothree:layout_constraintTop_toBottomOf="@+id/toolbar"
            sothree:layout_constraintBottom_toBottomOf="parent"
            app:brush="pen"
            app:brush_color="#000"
            app:drawing_background_color="#eee" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/colorPreview"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/round_button"
            android:tint="@color/black"/>

        <TextView
            android:id="@+id/current_utility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/colorPreview"/>

        <TextView
            android:id="@+id/currentSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_utility"
            android:layout_marginTop="3dp"
            android:layout_marginStart="15dp"
            android:textSize="17sp"
            android:layout_toEndOf="@+id/colorPreview"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrow"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:gravity="center"
            app:srcCompat="@drawable/arrow_drop_up_black"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:tint="@color/gray_light"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true" />

        <RelativeLayout
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/colorPreview"
            android:background="@color/gray_light"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <com.raed.drawingview.BrushView
            android:id="@+id/brushView"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@+id/divider1"/>

        <RelativeLayout
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/brushView"
            android:background="@color/gray_light"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <ScrollView
            android:id="@+id/scrolView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/divider2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/colorPreviewSlide"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/round_button"
                    android:layout_marginTop="5dp"
                    android:tint="@color/black"/>

                <Button
                    android:id="@+id/chooseColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_color"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/colorPreviewSlide"
                    android:layout_alignTop="@+id/colorPreviewSlide"/>

                <SeekBar
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:min="1"
                    android:max="100"
                    android:progress="25"
                    android:layout_below="@+id/colorPreviewSlide"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <RadioGroup
                    android:id="@+id/utility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/size">

                    <RadioButton
                        android:id="@+id/utilityPencil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pencil"/>

                    <RadioButton
                        android:id="@+id/utilityEraser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eraser"/>

                    <RadioButton
                        android:id="@+id/utilityAirbrush"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/air_brush"/>

                    <RadioButton
                        android:id="@+id/utilityCalligraphy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calligraphy"/>

                    <RadioButton
                        android:id="@+id/utilityPen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/pen"/>
                </RadioGroup>

                <RelativeLayout
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/utility"
                    android:background="@color/gray_light"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <RadioGroup
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider3"
                    android:layout_marginTop="5dp">

                    <RadioButton
                        android:id="@+id/backgroundColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/background_color"
                        android:checked="true"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/backgroundColorPreview"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:srcCompat="@drawable/round_button"
                            android:tint="#eee" />

                        <Button
                            android:id="@+id/chooseBackgroundColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/backgroundColorPreview"
                            android:layout_alignTop="@+id/backgroundColorPreview"
                            android:text="@string/choose_color"/>
                    </RelativeLayout>

                    <RadioButton
                        android:id="@+id/backgroundImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/background_image" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:id="@+id/backgroundImagePreview"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:civ_border="false"/>

                        <Button
                            android:id="@+id/chooseBackgroundImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/backgroundImagePreview"
                            android:layout_alignTop="@+id/backgroundImagePreview"
                            android:text="@string/choose_image"
                            android:enabled="false"/>
                    </RelativeLayout>
                </RadioGroup>

                <RelativeLayout
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/background"
                    android:background="@color/gray_light"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <Button
                    android:id="@+id/clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_image"
                    android:layout_below="@+id/divider4"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>